# iul_service

./: .gitignore  manage.py  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/accounts/management/commands/: csu.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: base.html  email_verification.html  email_verification_error.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html  signup_confirm.html  signup_done.html
apps/accounts/templates/accounts/password/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
config/: urls.py
config/settings/: base.py  development.py
static/css/: accounts.css
templates/registration/: password_reset_confirm.html
